2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Define colour conversions using red/green/blue chromaticities
	and white point rather than a matrix.

2015-04-13  c.hetherington  <cth@carlh.net>

	* Add menu option to reset default preferences.

2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.3 released.

2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.2 released.

2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Make the matrix used to convert from YUV to RGB configurable, so
	that the correct one for Rec 601 or 709 can be used.  Add a Rec
	601 colour conversion preset and change the Rec 709 preset to use
	the right matrix to convert from YUV to RGB.

	* Remove small (and incorrect) differences between RGB -> XYZ
	matrices for Rec 709 and sRGB.

2015-04-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.1 released.

2015-04-12  Carl Hetherington  <cth@carlh.net>

	* Possibly fix problems with multiple moving-image
	content in the same film (#531).

2015-03-26  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-03-22  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2015-03-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.0 released.

2015-03-20  c.hetherington  <cth@carlh.net>

	* Remove 1.37 ratio and set Academy to 1.375.

	* Update to de_DE translation from Carsten Kurz.

2015-03-18  Carl Hetherington  <cth@carlh.net>

	* Update to fr_FR translation from Thierry Journet.

2015-03-17  Carl Hetherington  <cth@carlh.net>

	* Update to es_ES translation from Manuel AC.

2015-03-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.16 released.

2015-03-16  Carl Hetherington  <cth@carlh.net>

	* Update to it_IT translation from Davide Sanvito.

2015-03-07  Carl Hetherington  <cth@carlh.net>

	* Ellipsize filters string if it is too long (#475).

	* Version 1.77.15 released.

2015-03-07  Carl Hetherington  <cth@carlh.net>
