@@ -1,3 +1,7 @@
+2015-04-14  Carl Hetherington  <cth@carlh.net>
+
+	* Allow adjustment of white point using a Bradford matrix.
+
 2015-04-13  Carl Hetherington  <cth@carlh.net>
 
 	* Define colour conversions using red/green/blue chromaticities
